# Unibench

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  benchmark.py  circle.yml  unibench  unibench2
benchmarks/: CMakeLists.txt
benchmarks/BOTS/: Makefile  README.md
benchmarks/BOTS/alignment/src/: Makefile  alignment.c  sequence.c
benchmarks/BOTS/common/: BOTSCommonUtils.h
benchmarks/BOTS/fft/src/: Makefile  fft  fft.c
benchmarks/BOTS/fib/src/: Makefile  fib.c  fib.h
benchmarks/BOTS/floorplan/src/: Makefile  floorplan.c
benchmarks/BOTS/health/src/: Makefile  health.c
benchmarks/BOTS/nqueens/src/: Makefile  nqueens.c
benchmarks/BOTS/sort/src/: Makefile  sort.c
benchmarks/BOTS/sparselu/src/: Makefile  sparselu.c
benchmarks/BOTS/strassen/src/: Makefile  strassen.c  strassen.h
benchmarks/OMPSpec/: CMakeLists.txt  LICENSE.txt
benchmarks/OMPSpec/target-3c/: CMakeLists.txt
benchmarks/OMPSpec/target-3c/src/: Makefile  target-3c.c  target-3c.c.autosave
benchmarks/OMPSpec/target-data-1c/: CMakeLists.txt
benchmarks/OMPSpec/target-data-1c/src/: Makefile  target-data-1c.c
benchmarks/OMPSpec/target-data-2c/: CMakeLists.txt
benchmarks/OMPSpec/target-data-2c/src/: Makefile  target-data-2c.c
benchmarks/OMPSpec/target-data-6c/: CMakeLists.txt
benchmarks/OMPSpec/target-data-6c/src/: Makefile  target-data-6c.c
benchmarks/Parboil/: CMakeLists.txt  Makefile
benchmarks/Parboil/common/: parboil.c  parboil.h  polybenchUtilFuncts.h
benchmarks/Parboil/mri-q/: CMakeLists.txt
benchmarks/Parboil/mri-q/src/: Makefile  computeQ.cc  file.cc  file.h  main.c
benchmarks/Parboil/sgemm/: CMakeLists.txt
benchmarks/Parboil/sgemm/src/: Makefile  io.cc  main.cc  sgemm_kernel.cc
benchmarks/Parboil/spmv/: CMakeLists.txt
benchmarks/Parboil/spmv/src/: Makefile  convert_dataset.c  convert_dataset.h  file.c  file.h  main.c  mmio.c  mmio.h
benchmarks/Parboil/stencil/: CMakeLists.txt
benchmarks/Parboil/stencil/src/: Makefile  file.c  file.h  kernels.c  kernels.h  main.c
benchmarks/Polybench/: CMakeLists.txt
benchmarks/Polybench/2DCONV/: CMakeLists.txt
benchmarks/Polybench/2DCONV/src/: 2DConvolution.c
benchmarks/Polybench/2MM/: CMakeLists.txt
benchmarks/Polybench/2MM/src/: 2mm.c
benchmarks/Polybench/3DCONV/: CMakeLists.txt
benchmarks/Polybench/3DCONV/src/: 3DConvolution.c
benchmarks/Polybench/3MM/: CMakeLists.txt
benchmarks/Polybench/3MM/src/: 3mm.c
benchmarks/Polybench/ATAX/: CMakeLists.txt
benchmarks/Polybench/ATAX/src/: atax.c
benchmarks/Polybench/BICG/: CMakeLists.txt
benchmarks/Polybench/BICG/src/: bicg.c
benchmarks/Polybench/CORR/: CMakeLists.txt
benchmarks/Polybench/CORR/src/: Makefile  correlation.c
benchmarks/Polybench/COVAR/: CMakeLists.txt
benchmarks/Polybench/COVAR/src/: covariance.c
benchmarks/Polybench/FDTD-2D/: CMakeLists.txt
benchmarks/Polybench/FDTD-2D/src/: fdtd2d.c
benchmarks/Polybench/GEMM/: CMakeLists.txt
benchmarks/Polybench/GEMM/src/: gemm.c
benchmarks/Polybench/GESUMMV/: CMakeLists.txt
benchmarks/Polybench/GESUMMV/src/: gesummv.c
benchmarks/Polybench/GRAMSCHM/: CMakeLists.txt
benchmarks/Polybench/GRAMSCHM/src/: gramschmidt.c
benchmarks/Polybench/MVT/: CMakeLists.txt
benchmarks/Polybench/MVT/src/: mvt.c
benchmarks/Polybench/SYR2K/: CMakeLists.txt
benchmarks/Polybench/SYR2K/src/: syr2k.c
benchmarks/Polybench/SYRK/: CMakeLists.txt
benchmarks/Polybench/SYRK/src/: syrk.c
benchmarks/Polybench/SYRK_M/: CMakeLists.txt
benchmarks/Polybench/SYRK_M/src/: Makefile  syrk_m.c
benchmarks/Polybench/common/: polybenchUtilFuncts.h
benchmarks/Rodinia/: CMakeLists.txt  LICENSE.txt  Makefile
benchmarks/Rodinia/b+tree/: CMakeLists.txt
benchmarks/Rodinia/b+tree/src/: Makefile  main.c  run
benchmarks/Rodinia/backprop/: CMakeLists.txt
benchmarks/Rodinia/backprop/src/: Makefile  backprop.c  backprop.h  backprop_kernel.c  facetrain.c  imagenet.c
benchmarks/Rodinia/bfs/: CMakeLists.txt
benchmarks/Rodinia/bfs/src/: Makefile  bfs.c  run
benchmarks/Rodinia/common/: rodiniaUtilFunctions.h
benchmarks/Rodinia/hotspot/: CMakeLists.txt
benchmarks/Rodinia/hotspot/src/: Makefile  hotspot.cpp  hotspot_openmp.cpp  run
benchmarks/Rodinia/lud/: CMakeLists.txt
benchmarks/Rodinia/lud/src/: Makefile  lud.c  lud_omp.c  run
benchmarks/Rodinia/nw/: CMakeLists.txt
benchmarks/Rodinia/nw/src/: Makefile  needle.cpp
benchmarks/Rodinia/srad/: CMakeLists.txt
benchmarks/Rodinia/srad/src/: Makefile  graphics.c  main.c  resize.c
benchmarks/common/: BenchmarksUtil.h
benchmarks/kastors/: CMakeLists.txt  Makefile
benchmarks/kastors/common/: Utils.h
benchmarks/kastors/jacobi/src/: Makefile  jacobi-block-for.c  jacobi-block-task-dep.c  jacobi-block-task.c  jacobi-task-dep.c  jacobi-task.c  main.c  main.h  poisson.c  poisson.h
benchmarks/kastors/plasma/: readme.md
benchmarks/kastors/plasma/src/: Makefile  Utils.h  dauxiliary.c  main.c  main.h  timing.c
benchmarks/kastors/sparselu/src/: Makefile  main.c  main.h  sparselu-task-dep.c  sparselu-task.c  sparselu.c  sparselu.h
benchmarks/kastors/strassen/src/: Makefile  main.c  main.h  strassen-task-dep.c  strassen.c  strassen.h
benchmarks/mgBench/: CMakeLists.txt  LICENSE.txt
benchmarks/mgBench/cholesky/: CMakeLists.txt
benchmarks/mgBench/cholesky/src/: Makefile  cholesky_gpu.c
benchmarks/mgBench/collinear-list/: CMakeLists.txt
benchmarks/mgBench/collinear-list/src/: Makefile  collinear-list_gpu.c
benchmarks/mgBench/common/: mgbenchUtilFunctions.h
benchmarks/mgBench/floyd/: CMakeLists.txt
benchmarks/mgBench/floyd/src/: Makefile  floyd_gpu.c
benchmarks/mgBench/k-nearest/: CMakeLists.txt
benchmarks/mgBench/lu-decomposition/: CMakeLists.txt
benchmarks/mgBench/mat-mul/: CMakeLists.txt
benchmarks/mgBench/mat-sum/: CMakeLists.txt
benchmarks/mgBench/other-nearest/: CMakeLists.txt
benchmarks/mgBench/search-vector/: CMakeLists.txt
benchmarks/mgBench/str-matching/: CMakeLists.txt
benchmarks/mgBench/vector-product/: CMakeLists.txt
benchmarks/toysreal/: Makefile
benchmarks/toysreal/Doom/: readme.md
common/: c.mk
(+29 files in other folders)
