
include_directories(common)

add_custom_target(Polybench)

add_subdirectory(2DCONV)
add_subdirectory(2MM)
add_subdirectory(3DCONV)
add_subdirectory(3MM)
add_subdirectory(ATAX)
add_subdirectory(BICG)
add_subdirectory(CORR)
add_subdirectory(COVAR)
add_subdirectory(FDTD-2D)
add_subdirectory(GEMM)
add_subdirectory(GESUMMV)
add_subdirectory(GRAMSCHM)
add_subdirectory(MVT)
add_subdirectory(SYR2K)
add_subdirectory(SYRK)
add_subdirectory(SYRK_M)
